Content, minor fix to sidebar width, spacing

--- a/web/src/style/components/accordion.css
+++ b/web/src/style/components/accordion.css
@@ -3,6 +3,10 @@
   margin: 0;
   padding: 0;
 
+  & .row {
+    margin-bottom: var(--spacing-8);
+  }
+
   & .accordion-content {
     display: none;
     position: relative;
