--- a/web/src/style/components/card.css
+++ b/web/src/style/components/card.css
@@ -3,6 +3,17 @@
   padding: var(--spacing-24);
   box-shadow: 0px 10px 20px rgba(102, 128, 158, 0.1);
 
+  & header {
+    & h1,
+    & h2,
+    & h3,
+    & h4,
+    & h5,
+    & h6 {
+      margin: 0;
+    }
+  }
+
   &.with-accordion {
     & .content {
       max-height: 10000000px;
